Work around #4554 (Extension Manager font is hard to read on Windows), which is a Chromium bug, by avoiding the lightest font-weight on Win. Lighten the text slightly so it's still a little muted, like the design looks on Mac and with older CEFs on Win.

--- a/src/styles/brackets_patterns_override.less
+++ b/src/styles/brackets_patterns_override.less
@@ -653,6 +653,12 @@
                 .user-select(text);
                 cursor: text;
             }
+            .platform-win & {  // work around #4554
+                .ext-name, .ext-desc {
+                    font-weight: normal;
+                    color: #2e2e2e;
+                }
+            }
             .muted {
                 color: #888;
             }
